################################################################################
# Includes
################################################################################

################################################################################
# Sources
################################################################################

set(SOURCES
	Stub.cpp
)

################################################################################
# Targets
################################################################################

add_library(display_common STATIC ${SOURCES})

################################################################################
# Libraries
################################################################################

target_link_libraries(display_common ${DRM_LIBRARIES})
