################################################################################
# Includes
################################################################################

pkg_check_modules (UDev REQUIRED libudev)

################################################################################
# Sources
################################################################################

set(SOURCES
	Connector.cpp
	Display.cpp
	DrmDetector.cpp
	Dumb.cpp
	FrameBuffer.cpp
	Modes.cpp
)

################################################################################
# Targets
################################################################################

add_library(display_drm STATIC ${SOURCES})

################################################################################
# Libraries
################################################################################

target_link_libraries(display_drm ${DRM_LIBRARIES} display_common udev)
